--- a/index.html
+++ b/index.html
@@ -89,6 +89,31 @@
                 <input name="submit" type="submit">
                 <button>ok</button>
             </form>
+            <a href="vikablazhkova@gmail.com">vikablazhkova@ukr.net</a>
+            <ul>
+                <li>home</li>
+                <li>man</li>
+                <li>woman</li>
+                <li>children</li>
+            </ul>
+            <ol>
+                <li>home</li>
+                <li>man</li>
+                <li>woman</li>
+                <li>children</li>
+            </ol>
+            <ol start="2">
+                <li>home</li>
+                <li>man</li>
+                <li>woman</li>
+                <li>children</li>
+            </ol>
+            <dl>
+                <dt>home</dt>
+                <dd>man</dd>
+                <dt>woman</dt>
+                <dd>children</dd>
+            </dl>
 
         </div>
     </body>
