--- a/index.html
+++ b/index.html
@@ -90,22 +90,22 @@
                 <button>ok</button>
             </form>
             <a href="vikablazhkova@gmail.com">vikablazhkova@ukr.net</a>
-            <ul>
+            <ul class="bg-blue">
                 <li>home</li>
                 <li>man</li>
-                <li>woman</li>
+                <li data-li=" h li-3">woman</li>
                 <li>children</li>
             </ul>
-            <ol>
+            <ol id="file">
                 <li>home</li>
-                <li>man</li>
+                <li data-li="li-2">man</li>
                 <li>woman</li>
                 <li>children</li>
             </ol>
             <ol start="2">
-                <li>home</li>
+                <li data-li="text li2">home</li>
                 <li>man</li>
-                <li>woman</li>
+                <li data-li="text h li1">woman</li>
                 <li>children</li>
             </ol>
             <dl>
@@ -116,6 +116,22 @@
             </dl>
 
         </div>
+        <header>
+            <div class="logo">
+                <a href="#"> some text
+                    <img src="" alt="">
+                </a>
+            </div>
+            <div class="nav">
+                <ul>
+                    <li>
+                        <a href="#" style="">
+
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </header>
     </body>
 </html>
 
