--- a/index.html
+++ b/index.html
@@ -1,121 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Title</title>
-        <link rel="stylesheet" href="css/styles.css">
-    </head>
-    <body >
-        <div style="max-width: 900px;margin: auto;overflow: hidden" >
-            <h1>Present-tense. An unlikely Buddhist <br> Meditation on Death & Masculinity</h1>
-            <img src="image/top/background.png">
-            <p>My Mother is dying, present-tense. Her time here on this planet will soon close. I have many thoughts— as a son, a buddhist and a man. If only to assuage my feelings of grief a bit and to avoid relying too much on others, I have been writing them down, since June. As a practicing (non) buddhist, I rely on one central teaching — the First Noble Truth, which says that desire — specifically for things to be different, is the cause of all suffering. Indeed, Gautama the Buddha’s own awakening began with the realization that there is no avoiding sickness, old age and death. All of us falter in our acceptance of this truth at one time or another.</p>
-            <p>On Memorial Day weekend, my mother choked on hot-dog, and her heart stopped. I find it painfully ironic that the last solid food my American-Italian Mother ate was a hot-dog. My father could not resuscitate her and she slipped into a coma. I didn’t know about the incident until the next day when my brother called. We already knew that she was suffering from dementia or something akin to it — hence the swallowing issues. When she came out of the coma, she received another diagnosis — stomach cancer. I went to the bed, for about three days. Not a very manly thing to do. My brother would call and tell me what was going on, but most people I spoke with didn’t really know what to say — if anything at all. I reached out to a few people at the time, most of whom were sympathetic, but for the first time I noticed very few people know how to deal with sickness or death, or can appreciate another person’s experience of them. There was awkwardness around my grief, my tearfulness, weakness and vulnerability.</p>
-            <blockquote style="border-left: 3px solid rgba(0,0,0,.84);padding-left: 20px; ">
-                <strong>Lesson: Death cannot be made “pretty” or sterilized or gentle. It is reasonable to expect the absolute utter worst during a time of death. Even a person with training in meditation can make errors and fall prey to illusion, expectations and the like. Do not beat yourself up about it.</strong>
-            </blockquote>
-            <span><del>Mr. Atticus Davis has just finished a second edition of his novel, Capernaum. Massachusetts, a modern parable called The Oath, a chapbook of poetry, Songs of Coming and Going, and published a collection of essays on politics, humanism, and capitalism entitled Vague Apocalyptica. With a little digging, you can find them. He splits his time between London, New England, and Northern California and is a partner in an Investment fund</del></span>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Lesson</th>
-                        <th>Lessons2</th>
-                        <th>Lessons3</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>2</td>
-                        <td>3</td>
-                    </tr>
-                    <tr>
-                        <td>4</td>
-                        <td>5</td>
-                        <td>6</td>
-                    </tr>
-                    <tr>
-                        <td>7</td>
-                        <td>8</td>
-                        <td>9</td>
-                    </tr>
+<head>
+	<meta charset="UTF-8">
+	<title>Title</title>
+	<link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+<header>
+	<a href="https://medium.com/@atticusdavie?source=post_header_lockup">Atticus Davis</a>
+	<div>Yes of course it's a pseudonym, I have to make a living.</div>
+	<div>Oct 8 . 12 minuts</div>
+</header>
+<main>
+	<div style="max-width: 900px;margin: auto;overflow: hidden">
+		<h1>Present-tense. An unlikely Buddhist <br> Meditation on Death & Masculinity</h1>
+		<img src="image/top/background.png">
+		<p>My Mother is dying, present-tense. Her time here on this planet will soon close. I have many thoughts— as a
+			son,
+			a buddhist and a man. If only to assuage my feelings of grief a bit and to avoid relying too much on others,
+			I
+			have been writing them down, since June. As a practicing (non) buddhist, I rely on one central
+			teaching — the
+			First Noble Truth, which says that desire — specifically for things to be different, is the cause of all
+			suffering. Indeed, Gautama the Buddha’s own awakening began with the realization that there is no avoiding
+			sickness, old age and death. All of us falter in our acceptance of this truth at one time or another.</p>
+		<p>On Memorial Day weekend, my mother choked on hot-dog, and her heart stopped. I find it painfully ironic that
+			the
+			last solid food my American-Italian Mother ate was a hot-dog. My father could not resuscitate her and she
+			slipped into a coma. I didn’t know about the incident until the next day when my brother called. We already
+			knew
+			that she was suffering from dementia or something akin to it — hence the swallowing issues. When she came
+			out of
+			the coma, she received another diagnosis — stomach cancer. I went to the bed, for about three days. Not a
+			very
+			manly thing to do. My brother would call and tell me what was going on, but most people I spoke with didn’t
+			really know what to say — if anything at all. I reached out to a few people at the time, most of whom were
+			sympathetic, but for the first time I noticed very few people know how to deal with sickness or death, or
+			can
+			appreciate another person’s experience of them. There was awkwardness around my grief, my tearfulness,
+			weakness
+			and vulnerability.</p>
+		<blockquote style="border-left: 3px solid rgba(0,0,0,.84);padding-left: 20px; ">
+			<strong>Lesson: Death cannot be made “pretty” or sterilized or gentle. It is reasonable to expect the
+				absolute
+				utter worst during a time of death. Even a person with training in meditation can make errors and fall
+				prey
+				to illusion, expectations and the like. Do not beat yourself up about it.</strong>
+		</blockquote>
+		<span><del>Mr. Atticus Davis has just finished a second edition of his novel, Capernaum. Massachusetts, a modern parable called The Oath, a chapbook of poetry, Songs of Coming and Going, and published a collection of essays on politics, humanism, and capitalism entitled Vague Apocalyptica. With a little digging, you can find them. He splits his time between London, New England, and Northern California and is a partner in an Investment fund</del></span>
+		<section>
+			<table>
+				<thead>
+				<tr>
+					<th>Lesson</th>
+					<th>Lessons2</th>
+					<th>Lessons3</th>
+				</tr>
+				</thead>
+				<tbody>
+				<tr>
+					<td>1</td>
+					<td>2</td>
+					<td>3</td>
+				</tr>
+				<tr>
+					<td>4</td>
+					<td>5</td>
+					<td>6</td>
+				</tr>
+				<tr>
+					<td>7</td>
+					<td>8</td>
+					<td>9</td>
+				</tr>
 
-                </tbody>
-            </table>
-            <iframe width="420" height="315"
-                    src="https://www.youtube.com/embed/tgbNymZ7vqY">
-            </iframe>
-            <audio controls>
-                <source src="horse.ogg" type="audio/ogg">
-                <source src="horse.mp3" type="audio/mpeg">
-                Your browser does not support the audio element.
-            </audio>
-            <video width="320" height="240" controls>
-                <source src="movie.mp4" type="video/mp4">
-                <source src="movie.ogg" type="video/ogg">
-                Your browser does not support the video tag.
-            </video>
-            <form action="#">
-                <label for="text">First name</label>
-                <input id="text" name="text" type="text">
-                <br>
-                <label for="radio">You Egrive</label>
-                <input id="radio" name="radio" value="1" type="radio">
-                <br>
-                <input id="checkbox" name="checkbox" value="2" type="checkbox">
-			    <label for="checkbox">checkbox</label>
-                <br>
-                <input name="hidden" value="3" type="hidden">
-                <br>
-                <label for="textarea">add comment please</label>
-                <textarea name="textarea" id="textarea" cols="30" rows="10"></textarea>
-                <br>
-                <label for="select">select car</label>
-                <select name="cars" id="select" size="4" multiple>
-                    <option value="volvo">Volvo</option>
-                    <option value="saab">Saab</option>
-                    <option value="fiat">Fiat</option>
-                    <option value="audi">Audi</option>
-                </select>
-                <br>
-                <label for="select2">select2 car</label>
-                <select name="cars2" id="select2">
-                    <option value="volvo">Volvo</option>
-                    <option value="saab">Saab</option>
-                    <option value="fiat">Fiat</option>
-                    <option value="audi">Audi</option>
-                </select>
-                <br>
-                <input name="submit" type="submit">
-                <button>ok</button>
-            </form>
-            <a href="vikablazhkova@gmail.com">vikablazhkova@ukr.net</a>
-            <ul>
-                <li>home</li>
-                <li>man</li>
-                <li>woman</li>
-                <li>children</li>
-            </ul>
-            <ol>
-                <li>home</li>
-                <li>man</li>
-                <li>woman</li>
-                <li>children</li>
-            </ol>
-            <ol start="2">
-                <li>home</li>
-                <li>man</li>
-                <li>woman</li>
-                <li>children</li>
-            </ol>
-            <dl>
-                <dt>home</dt>
-                <dd>man</dd>
-                <dt>woman</dt>
-                <dd>children</dd>
-            </dl>
+				</tbody>
+			</table>
+		</section>
+		<iframe width="420" height="315"
+		        src="https://www.youtube.com/embed/tgbNymZ7vqY">
+		</iframe>
+		<audio controls>
+			<source src="horse.ogg" type="audio/ogg">
+			<source src="horse.mp3" type="audio/mpeg">
+			Your browser does not support the audio element.
+		</audio>
+		<video width="320" height="240" controls>
+			<source src="movie.mp4" type="video/mp4">
+			<source src="movie.ogg" type="video/ogg">
+			Your browser does not support the video tag.
+		</video>
+		<form action="#">
+			<label for="text">First name</label>
+			<input id="text" name="text" type="text">
+			<br>
+			<label for="radio">You Egrive</label>
+			<input id="radio" name="radio" value="1" type="radio">
+			<br>
+			<input id="checkbox" name="checkbox" value="2" type="checkbox">
+			<label for="checkbox">checkbox</label>
+			<br>
+			<input name="hidden" value="3" type="hidden">
+			<br>
+			<label for="textarea">add comment please</label>
+			<textarea name="textarea" id="textarea" cols="30" rows="10"></textarea>
+			<br>
+			<label for="select">select car</label>
+			<select name="cars" id="select" size="4" multiple>
+				<option value="volvo">Volvo</option>
+				<option value="saab">Saab</option>
+				<option value="fiat">Fiat</option>
+				<option value="audi">Audi</option>
+			</select>
+			<br>
+			<label for="select2">select2 car</label>
+			<select name="cars2" id="select2">
+				<option value="volvo">Volvo</option>
+				<option value="saab">Saab</option>
+				<option value="fiat">Fiat</option>
+				<option value="audi">Audi</option>
+			</select>
+			<br>
+			<input name="submit" type="submit">
+			<button>ok</button>
+		</form>
+		<a href="vikablazhkova@gmail.com">vikablazhkova@ukr.net</a>
+		<ul>
+			<li>home</li>
+			<li>man</li>
+			<li>woman</li>
+			<li>children</li>
+		</ul>
+		<ol>
+			<li>home</li>
+			<li>man</li>
+			<li>woman</li>
+			<li>children</li>
+		</ol>
+		<ol start="2">
+			<li>home</li>
+			<li>man</li>
+			<li>woman</li>
+			<li>children</li>
+		</ol>
+		<dl>
+			<dt>home</dt>
+			<dd>man</dd>
+			<dt>woman</dt>
+			<dd>children</dd>
+		</dl>
 
-        </div>
-    </body>
+	</div>
+</main>
+<footer>
+	END
+</footer>
+</body>
 </html>
 
