--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Title</title>
+	<link href="https://fonts.googleapis.com/css?family=Anton|Charmonman|Indie+Flower" rel="stylesheet">
+	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -15,7 +17,8 @@
 	<div style="max-width: 900px;margin: auto;overflow: hidden">
 		<h1>Present-tense. An unlikely Buddhist <br> Meditation on Death & Masculinity</h1>
 		<img src="image/top/background.png">
-		<p>My Mother is dying, present-tense. Her time here on this planet will soon close. I have many thoughts— as a
+		<p class="font-charmonman">My Mother is dying, present-tense. Her time here on this planet will soon close. I
+			have many thoughts— as a
 			son,
 			a buddhist and a man. If only to assuage my feelings of grief a bit and to avoid relying too much on others,
 			I
@@ -24,7 +27,8 @@
 			First Noble Truth, which says that desire — specifically for things to be different, is the cause of all
 			suffering. Indeed, Gautama the Buddha’s own awakening began with the realization that there is no avoiding
 			sickness, old age and death. All of us falter in our acceptance of this truth at one time or another.</p>
-		<p>On Memorial Day weekend, my mother choked on hot-dog, and her heart stopped. I find it painfully ironic that
+		<p class="font-indie-flower">On Memorial Day weekend, my mother choked on hot-dog, and her heart stopped. I find
+			it painfully ironic that
 			the
 			last solid food my American-Italian Mother ate was a hot-dog. My father could not resuscitate her and she
 			slipped into a coma. I didn’t know about the incident until the next day when my brother called. We already
@@ -41,41 +45,16 @@
 			weakness
 			and vulnerability.</p>
 		<blockquote style="border-left: 3px solid rgba(0,0,0,.84);padding-left: 20px; ">
-			<strong>Lesson: Death cannot be made “pretty” or sterilized or gentle. It is reasonable to expect the
+			<strong class="line-height">Lesson: Death cannot be made “pretty” or sterilized or gentle. It is reasonable
+				to expect the
 				absolute
 				utter worst during a time of death. Even a person with training in meditation can make errors and fall
 				prey
 				to illusion, expectations and the like. Do not beat yourself up about it.</strong>
 		</blockquote>
-		<span><del>Mr. Atticus Davis has just finished a second edition of his novel, Capernaum. Massachusetts, a modern parable called The Oath, a chapbook of poetry, Songs of Coming and Going, and published a collection of essays on politics, humanism, and capitalism entitled Vague Apocalyptica. With a little digging, you can find them. He splits his time between London, New England, and Northern California and is a partner in an Investment fund</del></span>
+		<span class="custom-font line-height"><del>Mr. Atticus Davis has just finished a second edition of his novel, Capernaum. Massachusetts, a modern parable called The Oath, a chapbook of poetry, Songs of Coming and Going, and published a collection of essays on politics, humanism, and capitalism entitled Vague Apocalyptica. With a little digging, you can find them. He splits his time between London, New England, and Northern California and is a partner in an Investment fund</del></span>
 		<section>
-			<table>
-				<thead>
-				<tr>
-					<th>Lesson</th>
-					<th>Lessons2</th>
-					<th>Lessons3</th>
-				</tr>
-				</thead>
-				<tbody>
-				<tr>
-					<td>1</td>
-					<td>2</td>
-					<td>3</td>
-				</tr>
-				<tr>
-					<td>4</td>
-					<td>5</td>
-					<td>6</td>
-				</tr>
-				<tr>
-					<td>7</td>
-					<td>8</td>
-					<td>9</td>
-				</tr>
-
-				</tbody>
-			</table>
+			hear was a table
 		</section>
 		<iframe width="420" height="315"
 		        src="https://www.youtube.com/embed/tgbNymZ7vqY">
