--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<div style="max-width: 900px;margin: auto;overflow: hidden">
 		<h1>Present-tense. An unlikely Buddhist <br> Meditation on Death & Masculinity</h1>
 		<img src="image/top/background.png">
-		<p class="font-charmonman">My Mother is dying, present-tense. Her time here on this planet will soon close. I
+		<p id="iakor1" class="font-charmonman">My Mother is dying, present-tense. Her time here on this planet will soon close. I
 			have many thoughts— as a
 			son,
 			a buddhist and a man. If only to assuage my feelings of grief a bit and to avoid relying too much on others,
@@ -59,7 +59,7 @@
 		<iframe width="420" height="315"
 		        src="https://www.youtube.com/embed/tgbNymZ7vqY">
 		</iframe>
-		<audio controls>
+		<audio id="iakor3" controls>
 			<source src="horse.ogg" type="audio/ogg">
 			<source src="horse.mp3" type="audio/mpeg">
 			Your browser does not support the audio element.
@@ -103,7 +103,7 @@
 			<input name="submit" type="submit">
 			<button>ok</button>
 		</form>
-		<a href="vikablazhkova@gmail.com">vikablazhkova@ukr.net</a>
+		<a id="iakor4" href="vikablazhkova@gmail.com">vikablazhkova@ukr.net</a>
 		<ul class="bg-blue">
 			<li>home</li>
 			<li>man</li>
@@ -124,7 +124,7 @@
 		</ol>
 		<dl>
 			<dt>home</dt>
-			<dd>man</dd>
+			<dd id="iakor5">man</dd>
 			<dt>woman</dt>
 			<dd>children</dd>
 		</dl>
@@ -147,6 +147,183 @@
 		</ul>
 	</div>
 </header>
+<section>
+	<div class="col">
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+	</div>
+	<div class="col">
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+	</div>
+	<div class="col">
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+	</div>
+	<div class="col">
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+	</div>
+	<div class="col">
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+	</div>
+	<div class="col">
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+	</div>
+	<div class="col">
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+	</div>
+	<div class="col">
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+	</div>
+	<div class="col">
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+	</div>
+	<div class="col">
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+	</div>
+	<div class="col">
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+	</div>
+	<div class="col">
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+	</div>
+	<div class="col">
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+	</div>
+	<div class="col">
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+	</div>
+	<div class="col">
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+	</div>
+	<div class="col">
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+	</div>
+	<div class="col">
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+	</div>
+	<div class="col">
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+	</div>
+	<div class="col">
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+	</div>
+	<div class="col">
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+	</div>
+</section>
+
+<div class="hover">
+	<p id="iakor2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur exercitationem quos similique totam vel?
+		Adipisci at, debitis, dolores et facere harum impedit iste ratione repellat sequi veritatis vero vitae
+		voluptatibus.</p>
+	<p>Atque autem consequatur dolore dolores doloribus enim et eveniet ex, exercitationem expedita explicabo facilis
+		fuga ipsam iste magni nemo obcaecati possimus praesentium qui rem sequi sit, sunt vero. Corporis, non?</p>
+	<p>Atque deserunt dolor explicabo. Aliquid autem deserunt quam velit voluptas. Cumque debitis ducimus esse est
+		fugiat laudantium obcaecati qui quis, repellat tempora. Aspernatur, consequatur enim recusandae rem repellat
+		velit veritatis!</p>
+	<p>Consequuntur doloremque eveniet laboriosam necessitatibus nobis officia temporibus totam. Doloribus eaque fugiat
+		ipsa iusto modi, mollitia officia. Adipisci corporis odio quae totam. Harum illo possimus qui veniam? Cum ea,
+		facere!</p>
+	<p>At dignissimos doloribus enim expedita harum odit officia, officiis possimus tempora voluptate! Assumenda at
+		cupiditate error explicabo id perspiciatis placeat, praesentium provident, qui quibusdam reprehenderit sit ut,
+		vero! Corporis, possimus.</p>
+</div>
+<ul class="fixed">
+	<li>
+		<a href="#iakor1">якорь 1</a>
+	</li>
+	<li>
+		<a href="#iakor2">якорь 2</a>
+	</li>
+	<li>
+		<a href="#iakor3">якорь 3</a>
+	</li>
+	<li>
+		<a href="#iakor4">якорь 4</a>
+	</li>
+	<li>
+		<a href="#iakor5">якорь 5</a>
+	</li>
+
+</ul>
 <footer>
 	END
 </footer>
