--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 	<div style="max-width: 900px;margin: auto;overflow: hidden">
 		<h1>Present-tense. An unlikely Buddhist <br> Meditation on Death & Masculinity</h1>
 		<img src="image/top/background.png">
-		<p id="iakor1" class="font-charmonman">My Mother is dying, present-tense. Her time here on this planet will soon close. I
+		<p id="iakor1" class="font-charmonman">My Mother is dying, present-tense. Her time here on this planet will soon
+			close. I
 			have many thoughts— as a
 			son,
 			a buddhist and a man. If only to assuage my feelings of grief a bit and to avoid relying too much on others,
@@ -148,7 +149,30 @@
 	</div>
 </header>
 <section>
+	<div class="col" >
+
+		<div class="cell height1"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+	</div>
 	<div class="col">
+		<div class="cell height2"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+	</div>
+	<div class="col">
+		<div id="iakor6" class="cell height3"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+		<div class="cell"></div>
+	</div>
+	<div class="col">
+		<div class="cell height4"></div>
 		<div class="cell"></div>
 		<div class="cell"></div>
 		<div class="cell"></div>
@@ -266,32 +290,18 @@
 		<div class="cell"></div>
 		<div class="cell"></div>
 		<div class="cell"></div>
-	</div>
-	<div class="col">
 		<div class="cell"></div>
 		<div class="cell"></div>
 		<div class="cell"></div>
 		<div class="cell"></div>
 		<div class="cell"></div>
-	</div>
-	<div class="col">
-		<div class="cell"></div>
-		<div class="cell"></div>
-		<div class="cell"></div>
-		<div class="cell"></div>
-		<div class="cell"></div>
-	</div>
-	<div class="col">
-		<div class="cell"></div>
-		<div class="cell"></div>
-		<div class="cell"></div>
-		<div class="cell"></div>
-		<div class="cell"></div>
+
 	</div>
 </section>
 
 <div class="hover">
-	<p id="iakor2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur exercitationem quos similique totam vel?
+	<p id="iakor2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur exercitationem quos similique
+		totam vel?
 		Adipisci at, debitis, dolores et facere harum impedit iste ratione repellat sequi veritatis vero vitae
 		voluptatibus.</p>
 	<p>Atque autem consequatur dolore dolores doloribus enim et eveniet ex, exercitationem expedita explicabo facilis
@@ -308,21 +318,23 @@
 </div>
 <ul class="fixed">
 	<li>
-		<a href="#iakor1">якорь 1</a>
+		<a href="#iakor1">якорь -1</a>
 	</li>
 	<li>
-		<a href="#iakor2">якорь 2</a>
+		<a href="#iakor2">якорь -2</a>
 	</li>
 	<li>
-		<a href="#iakor3">якорь 3</a>
+		<a href="#iakor3">якорь -3</a>
 	</li>
 	<li>
-		<a href="#iakor4">якорь 4</a>
+		<a href="#iakor4">якорь -4</a>
 	</li>
 	<li>
-		<a href="#iakor5">якорь 5</a>
+		<a href="#iakor5">якорь -5</a>
 	</li>
-
+	<li>
+		<a href="#iakor6">якорь -6</a>
+	</li>
 </ul>
 <footer>
 	END
